--- a/todo.css
+++ b/todo.css
@@ -12,8 +12,8 @@ form input {
   border: 1px solid #ccc;
 }
 
-button {
-  background-color: #2098D1;
+#add_button {
+  background-color: #49a5bf;
   border: 1px solid rgba(0,0,0,.2);
   font-size: 100%;
   color: #fff;
@@ -30,31 +30,41 @@ ul {
 
 
 li {
-	background-color: #e1e1e1;
+	xbackground-color: #e1e1e1;
 	margin-bottom: 5px;
 	padding: 20px;
-	xborder: 1px solid #ccc;
-	xheight: 45px;
-	xtext-align: center;
+
+	background: rgba(147,206,222,1);
+	background: -moz-linear-gradient(left, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(147,206,222,1)), color-stop(41%, rgba(117,189,209,1)), color-stop(100%, rgba(73,165,191,1)));
+	background: -webkit-linear-gradient(left, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+	background: -o-linear-gradient(left, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+	background: -ms-linear-gradient(left, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+	background: linear-gradient(to right, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf', GradientType=1 );
 }
 
 a {
 	float: right;
-	margin-right: 10px;
-	xpadding: 15px;
-	xtext-align: center;
-	xheight: 45px;
+	margin-left: 21px;
+	margin-right: -20px;
+	margin-top: -20px;
+	padding: 20px 15px;
 }
 
-.delete_task {
+.title {
+	margin: 0px;
+}
+
+.delete_task, .done_task, .edit_task {
+	background: rgba(226,226,226,1);
+}
+
+.xdone_task {
 	background-color: #e1e1e1;
 }
 
-.done_task {
-	background-color: #e1e1e1;
-}
-
-.edit_task {
+.xedit_task {
 	background-color: #e1e1e1;
 }
 
@@ -72,6 +82,11 @@ a {
 
 .completed {
 	opacity: 0.4;
+}
+
+.edit_input {
+	display: none;
+	font-size: 16px;
 }
 
 
